Disable a warning that comes from the code generated by omniidl.  There is not much we can do to fix that sort of thing.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14640 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/Tweek_CXX/Tweek_CXX.vcproj
+++ b/juggler/vc7/Tweek_CXX/Tweek_CXX.vcproj
@@ -29,7 +29,7 @@
 				WarningLevel="2"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="1"
-				DisableSpecificWarnings="4244;4251;4311;4312"/>
+				DisableSpecificWarnings="4244;4251;4275;4311;4312"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -89,7 +89,7 @@ $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -Ctweek\CORBA -I../..
 				WarningLevel="2"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4244;4251;4311;4312"/>
+				DisableSpecificWarnings="4244;4251;4275;4311;4312"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -147,7 +147,7 @@ $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -Ctweek\CORBA -I../..
 				WarningLevel="2"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="1"
-				DisableSpecificWarnings="4244;4251;4311;4312"/>
+				DisableSpecificWarnings="4244;4251;4275;4311;4312"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
@@ -195,7 +195,7 @@ $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -Ctweek\CORBA -I../..
 				WarningLevel="2"
 				Detect64BitPortabilityProblems="TRUE"
 				DebugInformationFormat="3"
-				DisableSpecificWarnings="4244;4251;4311;4312"/>
+				DisableSpecificWarnings="4244;4251;4275;4311;4312"/>
 			<Tool
 				Name="VCCustomBuildTool"/>
 			<Tool
