Add the Java3D .jar file(s) to the classpath.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14650 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/vrjconfig/customeditors/surfacedisplayeditor/build.xml.in
+++ b/juggler/modules/vrjuggler/vrjconfig/customeditors/surfacedisplayeditor/build.xml.in
@@ -8,6 +8,7 @@
    <path id="tweek.classpath">
       <pathelement path="@TWEEK_JARS@" />
       <pathelement path="@TWEEK_EXT_JARS@" />
+      <pathelement path="@JAVA3D_JAR@" />
    </path>
 
    <path id="jccl.classpath">
