Do not use a hard-coded version of omniORB (4.0.2).  Instead, detect the version when buildwin32.py is run based on what is installed in the directory given by the user.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14667 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/Gadgeteer/Tweek/Tweek.vcproj
+++ b/juggler/vc7/Gadgeteer/Tweek/Tweek.vcproj
@@ -35,7 +35,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="omniORB402_rtd.lib omnithread30_rtd.lib omniDynamic402_rtd.lib gadget_d.lib jccl_d.lib tweek_d.lib vpr_d.lib cppdom.lib libnspr4.lib libplc4.lib ws2_32.lib comctl32.lib gdi32.lib user32.lib $(NOINHERIT)"
+				AdditionalDependencies="omniORB$(OMNIORB_VERSION)_rtd.lib omnithread30_rtd.lib omniDynamic$(OMNIORB_VERSION)_rtd.lib gadget_d.lib jccl_d.lib tweek_d.lib vpr_d.lib cppdom.lib libnspr4.lib libplc4.lib ws2_32.lib comctl32.lib gdi32.lib user32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/TweekGadget_drv_d.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\DebugDLL&quot;;&quot;$(OMNIORB_ROOT)\lib\x86_win32&quot;;..\DebugDLL;..\..\Tweek_CXX\DebugDLL;..\..\JCCL\DebugDLL;..\..\VPR\DebugDLL"
@@ -50,7 +50,7 @@
 				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Generate C++ code from CORBA IDL"
+				Description="Generating C++ code from CORBA IDL..."
 				CommandLine="$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekAnalogSubject.idl
 $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekDigitalSubject.idl
 $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekPositionSubject.idl
@@ -92,7 +92,7 @@ $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tw
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="omniORB402_rt.lib omnithread30_rt.lib omniDynamic402_rt.lib gadget.lib jccl.lib tweek.lib vpr.lib cppdom.lib libnspr4.lib ws2_32.lib comctl32.lib gdi32.lib user32.lib $(NOINHERIT)"
+				AdditionalDependencies="omniORB$(OMNIORB_VERSION)_rt.lib omnithread30_rt.lib omniDynamic$(OMNIORB_VERSION)_rt.lib gadget.lib jccl.lib tweek.lib vpr.lib cppdom.lib libnspr4.lib ws2_32.lib comctl32.lib gdi32.lib user32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/TweekGadget_drv.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\ReleaseDLL&quot;;&quot;$(OMNIORB_ROOT)\lib\x86_win32&quot;;..\ReleaseDLL;..\..\Tweek_CXX\ReleaseDLL;..\..\JCCL\ReleaseDLL;..\..\VPR\ReleaseDLL"
@@ -109,7 +109,7 @@ $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tw
 				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Generate C++ code from CORBA IDL"
+				Description="Generating C++ code from CORBA IDL..."
 				CommandLine="$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekAnalogSubject.idl
 $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekDigitalSubject.idl
 $(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\gadgeteer\drivers\Open\Tweek ..\..\..\modules\gadgeteer\drivers\Open\Tweek\idl\TweekPositionSubject.idl
