--- a/juggler/vc7/JCCL/RTRC_Plugin_CXX/RTRC_Plugin_CXX.vcproj
+++ b/juggler/vc7/JCCL/RTRC_Plugin_CXX/RTRC_Plugin_CXX.vcproj
@@ -35,7 +35,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="omniORB402_rtd.lib omnithread30_rtd.lib omniDynamic402_rtd.lib jccl_d.lib tweek_d.lib vpr_d.lib cppdom.lib libnspr4.lib $(NOINHERIT)"
+				AdditionalDependencies="omniORB$(OMNIORB_VERSION)_rtd.lib omnithread30_rtd.lib omniDynamic$(OMNIORB_VERSION)_rtd.lib jccl_d.lib tweek_d.lib vpr_d.lib cppdom.lib libnspr4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/corba_rtrc_d.dll"
 				LinkIncremental="2"
 				AdditionalLibraryDirectories="..\..\VPR\DebugDLL;..\DebugDLL;..\..\Tweek_CXX\DebugDLL;&quot;$(CPPDOM_ROOT)\lib\DebugDLL&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(OMNIORB_ROOT)\lib\x86_win32&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
@@ -50,7 +50,7 @@
 				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Generate C++ code from CORBA IDL"
+				Description="Generating C++ code from CORBA IDL..."
 				CommandLine="$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\jackal\plugins ..\..\..\modules\jackal\plugins\corba_rtrc\idl\RemoteReconfigSubject.idl"/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
@@ -89,7 +89,7 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="omniORB402_rt.lib omnithread30_rt.lib omniDynamic402_rt.lib jccl.lib tweek.lib vpr.lib cppdom.lib libnspr4.lib $(NOINHERIT)"
+				AdditionalDependencies="omniORB$(OMNIORB_VERSION)_rt.lib omnithread30_rt.lib omniDynamic$(OMNIORB_VERSION)_rt.lib jccl.lib tweek.lib vpr.lib cppdom.lib libnspr4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/corba_rtrc.dll"
 				LinkIncremental="1"
 				AdditionalLibraryDirectories="..\..\VPR\ReleaseDLL;..\ReleaseDLL;..\..\Tweek_CXX\ReleaseDLL;&quot;$(CPPDOM_ROOT)\lib\ReleaseDLL&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(OMNIORB_ROOT)\lib\x86_win32&quot;;&quot;$(BOOST_ROOT)\lib&quot;"
@@ -105,7 +105,7 @@
 				Name="VCPostBuildEventTool"/>
 			<Tool
 				Name="VCPreBuildEventTool"
-				Description="Generate C++ code from CORBA IDL"
+				Description="Generating C++ code from CORBA IDL..."
 				CommandLine="$(OMNIORB_ROOT)\bin\x86_win32\omniidl -bcxx -Wbh=.h,s=.cpp -I..\..\..\modules\tweek -C. -I..\..\..\modules\jackal\plugins ..\..\..\modules\jackal\plugins\corba_rtrc\idl\RemoteReconfigSubject.idl"/>
 			<Tool
 				Name="VCPreLinkEventTool"/>
