Updated to expect the installation directory structure that is used by CppDOM 0.3.2 and beyond.  This greatly simplifies handling of CppDOM DLLs, and I hope it will help ensure stability of VR Juggler installations.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14674 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/vc7/JCCL/JCCL.vcproj
+++ b/juggler/vc7/JCCL/JCCL.vcproj
@@ -35,11 +35,11 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="vpr_d.lib cppdom.lib libnspr4.lib libplc4.lib $(NOINHERIT)"
+				AdditionalDependencies="vpr_d.lib cppdom_d.lib libnspr4.lib libplc4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/jccl_d.dll"
-				Version="0.16.0"
+				Version="0.17.0"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\DebugDLL&quot;;&quot;$(BOOST_ROOT)\lib&quot;;..\VPR\DebugDLL"
+				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;..\VPR\DebugDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/jccl_d.pdb"
 				SubSystem="2"
@@ -89,9 +89,9 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="vpr.lib cppdom.lib libnspr4.lib libplc4.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/jccl.dll"
-				Version="0.16.0"
+				Version="0.17.0"
 				LinkIncremental="0"
-				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\ReleaseDLL&quot;;&quot;$(BOOST_ROOT)\lib&quot;;..\VPR\ReleaseDLL"
+				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;..\VPR\ReleaseDLL"
 				GenerateDebugInformation="FALSE"
 				SubSystem="2"
 				OptimizeReferences="2"
