--- a/juggler/vc7/Gadgeteer/VRPN/VRPN.vcproj
+++ b/juggler/vc7/Gadgeteer/VRPN/VRPN.vcproj
@@ -35,10 +35,10 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gadget_d.lib jccl_d.lib vpr_d.lib cppdom.lib quat.lib vrpn.lib libnspr4.lib libplc4.lib ws2_32.lib comctl32.lib gdi32.lib user32.lib $(NOINHERIT)"
+				AdditionalDependencies="gadget_d.lib jccl_d.lib vpr_d.lib quat.lib vrpn.lib libnspr4.lib libplc4.lib ws2_32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/VRPN_drv_d.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\DebugDLL&quot;;&quot;$(VRPN_ROOT)\quat\pc_win32\Debug&quot;;&quot;$(VRPN_ROOT)\vrpn\pc_win32\Debug&quot;;..\DebugDLL;..\..\JCCL\DebugDLL;..\..\VPR\DebugDLL"
+				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(VRPN_ROOT)\quat\pc_win32\Debug&quot;;&quot;$(VRPN_ROOT)\vrpn\pc_win32\Debug&quot;;..\DebugDLL;..\..\JCCL\DebugDLL;..\..\VPR\DebugDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/VRPN_drv_d.pdb"
 				SubSystem="2"
@@ -87,10 +87,10 @@
 				Name="VCCustomBuildTool"/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="gadget.lib jccl.lib vpr.lib cppdom.lib quat.lib vrpn.lib libnspr4.lib libplc4.lib ws2_32.lib comctl32.lib gdi32.lib user32.lib $(NOINHERIT)"
+				AdditionalDependencies="gadget.lib jccl.lib vpr.lib quat.lib vrpn.lib libnspr4.lib libplc4.lib ws2_32.lib $(NOINHERIT)"
 				OutputFile="$(OutDir)/VRPN_drv.dll"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(CPPDOM_ROOT)\lib\ReleaseDLL&quot;;&quot;$(VRPN_ROOT)\quat\pc_win32\Release&quot;;&quot;$(VRPN_ROOT)\vrpn\pc_win32\Release&quot;;..\ReleaseDLL;..\..\JCCL\ReleaseDLL;..\..\VPR\ReleaseDLL"
+				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(BOOST_ROOT)\lib&quot;;&quot;$(VRPN_ROOT)\quat\pc_win32\Release&quot;;&quot;$(VRPN_ROOT)\vrpn\pc_win32\Release&quot;;..\ReleaseDLL;..\..\JCCL\ReleaseDLL;..\..\VPR\ReleaseDLL"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/VRPN_drv.pdb"
 				SubSystem="2"
