Reference the single environment variable $(VJ_DEPS_DIR) instead of the myriad other variables that point to individual dependencies.  Doing this means that people are required to have VR Juggler's C++ dependencies in a single directory (which can be the same as the directory named by %VJ_BASE_DIR%), so there may need to be a compromise made between this and the multi-directory option.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk@14677 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/juggler/modules/vrjuggler/test/Draw/OGL/cubes/cubes.vcproj
+++ b/juggler/modules/vrjuggler/test/Draw/OGL/cubes/cubes.vcproj
@@ -20,8 +20,9 @@
 			ATLMinimizesCRunTimeLibraryUsage="FALSE">
 			<Tool
 				Name="VCCLCompilerTool"
+				AdditionalOptions="/Zm800"
 				Optimization="0"
-				AdditionalIncludeDirectories=".;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;"
+				AdditionalIncludeDirectories=".;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;"
 				PreprocessorDefinitions="_DEBUG;_CONSOLE;WIN32"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
@@ -45,7 +46,7 @@
 				OutputFile="$(OutDir)\cubes.exe"
 				LinkIncremental="2"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile=".\Debug/cubes.pdb"
 				SubSystem="1"/>
@@ -77,7 +78,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				InlineFunctionExpansion="1"
-				AdditionalIncludeDirectories=".;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;"
+				AdditionalIncludeDirectories=".;&quot;$(VJ_DEPS_DIR)\include&quot;;&quot;$(VJ_BASE_DIR)\include&quot;"
 				PreprocessorDefinitions="_OPT;NDEBUG;_CONSOLE;WIN32"
 				StringPooling="TRUE"
 				RuntimeLibrary="2"
@@ -102,7 +103,7 @@
 				OutputFile="$(OutDir)\cubes.exe"
 				LinkIncremental="1"
 				SuppressStartupBanner="TRUE"
-				AdditionalLibraryDirectories="&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
+				AdditionalLibraryDirectories="&quot;$(VJ_DEPS_DIR)\lib&quot;;&quot;$(NSPR_ROOT)\lib&quot;;&quot;$(VJ_BASE_DIR)\lib&quot;"
 				ProgramDatabaseFile=".\Release/cubes.pdb"
 				SubSystem="1"/>
 			<Tool
