--- a/juggler/vc7/Sonix/Audiere/Audiere.vcproj
+++ b/juggler/vc7/Sonix/Audiere/Audiere.vcproj
@@ -19,7 +19,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;$(AUDIERE_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\sonix;..\..\..\modules\sonix\plugins;..\..\..\external\GMTL"
+				AdditionalIncludeDirectories="&quot;$(AUDIERE_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\sonix;..\..\..\modules\sonix\plugins"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;_SNX_PLUGIN_BUILD_"
 				MinimalRebuild="FALSE"
 				BasicRuntimeChecks="3"
@@ -70,7 +70,7 @@
 				Optimization="2"
 				InlineFunctionExpansion="1"
 				OmitFramePointers="TRUE"
-				AdditionalIncludeDirectories="&quot;$(AUDIERE_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\sonix;..\..\..\modules\sonix\plugins;..\..\..\external\GMTL"
+				AdditionalIncludeDirectories="&quot;$(AUDIERE_ROOT)\include&quot;;&quot;$(NSPR_ROOT)\include&quot;;&quot;$(BOOST_INCLUDES)&quot;;&quot;$(CPPDOM_ROOT)\include&quot;;&quot;$(GMTL_ROOT)\include&quot;;..;..\..\..\modules\vapor;..\..\VPR;..\..\..\modules\sonix;..\..\..\modules\sonix\plugins"
 				PreprocessorDefinitions="WIN32;_OPT;NDEBUG;_WINDOWS;_USRDLL;_SNX_PLUGIN_BUILD_"
 				StringPooling="TRUE"
 				MinimalRebuild="FALSE"
