Changed the init file in preparation for the upcoming build system changes related to GMTL.
git-svn-id: https://vrjuggler.googlecode.com/svn/trunk/juggler@14682 08b38cba-cd3b-11de-854e-f91c5b6e4272

--- a/external/configure.in
+++ b/external/configure.in
@@ -38,7 +38,7 @@
 # -----------------------------------------------------------------------------
 
 AC_REVISION($Revision$)
-AC_INIT(GMTL/gmtl/Version.h)
+AC_INIT([ant/lib/ant.jar])
 AC_CONFIG_AUX_DIR(../share/config)
 DPP_PREREQ([1.5.1])
 DPP_INIT
